* Modbus connectivity and GUI handled by plugins. * Modified Makefile and various dev files. * AppFull: Reorganized code and various imporvements. + LibBase: ProjectModel can be loaded from XML file. + LibBase: Added GUIVisitor and various improvements. + LibGUI: New library for common GUI (widget-based) elements.

--- a/AppFull/ui/MainWindow.ui
+++ b/AppFull/ui/MainWindow.ui
@@ -116,7 +116,7 @@
    <widget class="QWidget" name="projectViewDockWidgetContents">
     <layout class="QVBoxLayout" name="projectDockLayout">
      <item>
-      <widget class="QTreeView" name="projectView"/>
+      <widget class="ProjectView" name="projectView"/>
      </item>
     </layout>
    </widget>
@@ -222,6 +222,11 @@
    <class>MessageArea</class>
    <extends>QTextEdit</extends>
    <header>../src/MessageArea.hpp</header>
+  </customwidget>
+  <customwidget>
+   <class>ProjectView</class>
+   <extends>QTreeView</extends>
+   <header>../src/ProjectView.hpp</header>
   </customwidget>
  </customwidgets>
  <resources>
