--- a/PluginModbusGUI/src/pluginModbusGUI/_ClientControlWidget.ui
+++ b/PluginModbusGUI/src/pluginModbusGUI/_ClientControlWidget.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>modbus::ui::ClientControlWidget</class>
- <widget class="QWidget" name="modbus::ui::ClientControlWidget">
+ <class>pluginModbusGUI::ClientControlWidget</class>
+ <widget class="QWidget" name="pluginModbusGUI::ClientControlWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>93</width>
-    <height>105</height>
+    <width>267</width>
+    <height>41</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -17,9 +17,22 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Control</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QHBoxLayout" name="horizontalLayout">
+   <item>
+    <spacer name="horizontalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
    <item>
     <widget class="QPushButton" name="connectButton">
      <property name="text">
@@ -42,14 +55,14 @@
     </widget>
    </item>
    <item>
-    <spacer name="verticalSpacer">
+    <spacer name="horizontalSpacer">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Horizontal</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>20</width>
-       <height>40</height>
+       <width>40</width>
+       <height>20</height>
       </size>
      </property>
     </spacer>
