--- a/AppLite/AppLite.qrc
+++ b/AppLite/AppLite.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>img/icon.png</file>
         <file>qml/MainWindow.qml</file>
+        <file>qml/DefaultScreen.qml</file>
     </qresource>
 </RCC>
