Implement 'Prompt' and 'PopupBridge'.
Additionaly some minor fixes and improvements.

--- a/AppLite/AppLite.qrc
+++ b/AppLite/AppLite.qrc
@@ -3,5 +3,6 @@
         <file>img/icon.png</file>
         <file>qml/MainWindow.qml</file>
         <file>qml/DefaultScreen.qml</file>
+        <file>qml/PromptDialog.qml</file>
     </qresource>
 </RCC>
