--- a/tools/cutehmi_view/cutehmi_view.qrc
+++ b/tools/cutehmi_view/cutehmi_view.qrc
@@ -5,5 +5,6 @@
         <file>qml/DefaultScreen.qml</file>
         <file>qml/PromptDialog.qml</file>
         <file>qml/NotificationListView.qml</file>
+        <file>cutehmi.metadata.json</file>
     </qresource>
 </RCC>
