Update documentation related files to reflect new directory structure.

--- a/doc/layout/ProjectLayout.xml
+++ b/doc/layout/ProjectLayout.xml
@@ -4,9 +4,8 @@
   <navindex>
     <tab type="mainpage" visible="yes" title=""/>
     <tab type="pages" visible="no" title="" intro=""/>
-    <tab type="user" url="@ref modulesList" title="Modules"/>
+    <tab type="user" url="@ref extensionsList" title="Extensions"/>
     <tab type="user" url="@ref toolsList" title="Tools"/>
-    <tab type="user" url="@ref qmlList" title="QML extensions"/>
     <tab type="modules" visible="yes" title="" intro=""/>
     <tab type="namespaces" visible="yes" title="">
       <tab type="namespacelist" visible="yes" title="" intro=""/>
