--- a/doc/layout/ProductLayout.xml
+++ b/doc/layout/ProductLayout.xml
@@ -3,9 +3,8 @@
   <!-- Navigation index tabs for HTML output -->
   <navindex>
     <tab type="user" url="../index.html" title="Main Page"/>
-    <tab type="user" url="../modules_list.html" title="Modules"/>
+    <tab type="user" url="../extensions_list.html" title="Extensions"/>
     <tab type="user" url="../tools_list.html" title="Tools"/>
-    <tab type="user" url="../qml_list.html" title="QML extensions"/>
     <tab type="mainpage" visible="yes" title="Overview"/>
     <tab type="pages" visible="yes" title="" intro=""/>
     <tab type="modules" visible="yes" title="" intro=""/>
