--- a/tools/cutehmi_view/resources.qrc
+++ b/tools/cutehmi_view/resources.qrc
@@ -5,5 +5,6 @@
         <file>qml/DefaultScreen.qml</file>
         <file>qml/MessageDialog.qml</file>
         <file>qml/NotificationListView.qml</file>
+        <file>qml/ExtensionLoader.qml</file>
     </qresource>
 </RCC>
